--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -1,2 +1,97 @@
-{% extends "pages/base.html" %}
-{% block title %}Home{% endblock %}
+{% extends "base.html" %}
+{% load static %}
+{% block title %}TrangChu{% endblock %}
+{% block banner %}
+    <div id="carouselExampleIndicators" class="carousel slide mb-4 banner" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="{% static 'image/banner/banner02.jpg' %}" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="{% static 'image/banner/banner02.jpg' %}" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="{% static 'image/banner/banner02.jpg' %}" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+{% endblock %}
+{% block article %}
+    <div class="container">
+        <div class="row mb_10">
+            <div class="col">
+                <h2 class="mb-0">Khóa Học</h2>
+            </div>
+        </div>
+    </div>
+    <!-- section -->
+    <section class="md-section" style="padding:0;">
+        <div class="container">
+				<div class="textbox-group">
+					<div class="row">
+						<div class="col-md-4 col-lg-4 mt_t20">
+									
+							<!-- textbox -->
+							<div class="textbox">
+								<div class="textbox__image"><a href="\python_page"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
+								<div class="textbox__body">
+									<h2 class="textbox__title"><a href="#">Python</a></h2>
+									<div class="textbox__description">Các bài học về Python từ cơ bản đến nâng cao</div>
+								</div>
+							</div><!-- End / textbox -->
+									
+						</div>
+						<div class="col-md-4 col-lg-4 mt_t20">
+									
+							<!-- textbox -->
+							<div class="textbox">
+								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/reactjs.png' %}" alt="reactjs"></a></div>
+								<div class="textbox__body">
+									<h2 class="textbox__title"><a href="#">ReactJS</a></h2>
+									<div class="textbox__description">Các bài học về ReactJS từ cơ bản đến nâng cao</div>
+								</div>
+							</div><!-- End / textbox -->
+									
+						</div>
+						<div class="col-md-4 col-lg-4 mt_t20">
+									
+							<!-- textbox -->
+							<div class="textbox">
+								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/golang.png' %}" alt="golang"></a></div>
+								<div class="textbox__body">
+									<h2 class="textbox__title"><a href="#">GoLang</a></h2>
+									<div class="textbox__description">Các bài học về GoLang từ cơ bản đến nâng cao</div>
+								</div>
+							</div><!-- End / textbox -->
+									
+						</div>
+                        <div class="col-md-4 col-lg-4 mt_t20">
+									
+							<!-- textbox -->
+							<div class="textbox">
+								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/golang.png' %}" alt=""></a></div>
+								<div class="textbox__body">
+									<h2 class="textbox__title"><a href="#">GoLang</a></h2>
+									<div class="textbox__description">Các bài học về GoLang từ cơ bản đến nâng cao</div>
+								</div>
+							</div><!-- End / textbox -->
+									
+						</div>
+					</div>
+				</div>
+			</div>
+    </section>
+{% endblock %}
