--- a/home/static/css/common.css
+++ b/home/static/css/common.css
@@ -38,6 +38,10 @@ body{
 .text-muted {
     color: #f8f9fa!important;
 }
+#tns1 > .tns-item {
+    width: calc(14.2857%);
+    padding-right: 20px;
+}
 
 .contact_footer{
     text-align: right;
@@ -82,4 +86,49 @@ img {
     height: 30px !important;
     width: 30px !important;
 }
+#tns1 > .tns-item {
+    font-size: 14px;
+}
+.tns-horizontal.tns-subpixel>.tns-item {
+    display: inline-block;
+    vertical-align: top;
+    white-space: normal;
+}
+.tns-slider>.tns-item {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+.card-hover {
+    transition: box-shadow .25s ease;
+}
+.card {
+    border: 0;
+    box-shadow: 0 1px 3px rgb(3 0 71 / 9%);
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #eae7f5;
+    border-radius: .5rem;
+}
+.card-body{
+    padding: 10px 10px;
+}
+.card-footer {
+    padding: 10px 10px;
+    background-color: #fff;
+    border-top: 1px solid #eae7f5;
+}
 
+.item{
+    padding: 0px 5px;
+}
+.form-inline button{
+    margin-left: 10px;
+}
