--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -18,6 +18,7 @@
         <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
         <script src="{% static 'js/popper.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}" async defer></script>
+        <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
         <!-- java script self-defined -->
         
     </head>
@@ -53,7 +54,8 @@
                             </li>                           
                         </ul>
                     <form class="form-inline my-2 my-md-0">
-                        <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-info btn-sm">Đăng Ký</button>
+                        <button class="btn btn-info btn-sm">Đăng Nhập</button>
                     </form>
                     </div>
                 </div>
@@ -63,14 +65,10 @@
         </header>
 
         <!-- article -->
-        <article>
-            {% block article %}{% endblock %}
-        </article>
+        {% block article %}{% endblock %}
 
         <!-- aside -->
-        <aside>
-            {% block aside %}{% endblock %}
-        </aside>
+        {% block aside %}{% endblock %}
 
         <!-- footer -->
         <footer class="bg-dark bg-cover footer mt_t30">
