--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -98,4 +98,43 @@
 			</div>
     </section>
 </article>
+<article>
+    <div class="container">
+        <div class="row mb_10 mt_t30">
+            <div class="title_header">
+                <h2 class="mb-0">Việc Làm IT Tại Nhà</h2>
+            </div>
+        </div>
+    </div>
+    <!-- section -->
+    <section class="md-section" style="padding:0;">
+        <div class="container">
+				<div class="textbox-group">
+					<div class="row">
+						<div class="col-md-4 col-lg-4 mt_t20">									
+							<!-- textbox -->
+							<div class="textbox">
+								<div class="textbox__image"><a href="\python_page"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
+								<div class="textbox__body">
+									<h2 class="textbox__title"><a href="#">Tìm Việc</a></h2>
+									<div class="textbox__description">Dành cho các developer muốn tìm việc làm thêm tại nhà</div>
+								</div>
+							</div><!-- End / textbox -->									
+						</div>
+
+						<div class="col-md-4 col-lg-4 mt_t20">									
+							<!-- textbox -->
+							<div class="textbox">
+								<div class="textbox__image"><a href="\python_page"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
+								<div class="textbox__body">
+									<h2 class="textbox__title"><a href="#">Tìm Người</a></h2>
+									<div class="textbox__description">Dành cho cá nhân và tổ chức muốn tìm developer làm dự án</div>
+								</div>
+							</div><!-- End / textbox -->									
+						</div>
+					</div>
+				</div>
+		</div>
+	</section>
+</article>
 {% endblock %}
