--- a/home/static/css/common.css
+++ b/home/static/css/common.css
@@ -21,7 +21,9 @@ body{
 .mb_20{
     margin-bottom: 20px;
 }
-
+.mr_20{
+    margin-right: 20px;
+}
 .footer{
     min-height: 60px;
     max-height: 108px;
