--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -47,7 +47,7 @@
                             </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Giới Thiệu</a>
+                                <a class="nav-link" href="\about">Giới Thiệu</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Liên Hệ</a>
