--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="row mb_10">
             <div class="title_header">
-                <h2 class="mb-0">Khóa Học</h2>
+                <h2 class="mb-0 bold">Khóa Học</h2>
             </div>
         </div>
     </div>
@@ -49,10 +49,10 @@
 									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image"><a href="\python_page"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
+								<div class="textbox__image"><a href="\Python"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
 								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="#">Python</a></h2>
-									<div class="textbox__description">Các bài học về Python từ cơ bản đến nâng cao</div>
+									<h2 class="textbox__title"><a href="\Python">Python</a></h2>
+									<div class="textbox__description"><p class="bold">Các bài học về Python từ cơ bản đến nâng cao</p></div>
 								</div>
 							</div><!-- End / textbox -->
 									
@@ -64,7 +64,7 @@
 								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/reactjs.png' %}" alt="reactjs"></a></div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">ReactJS</a></h2>
-									<div class="textbox__description">Các bài học về ReactJS từ cơ bản đến nâng cao</div>
+									<div class="textbox__description"><p class="bold">Các bài học về ReactJS từ cơ bản đến nâng cao</p></div>
 								</div>
 							</div><!-- End / textbox -->
 									
@@ -76,7 +76,7 @@
 								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/golang.png' %}" alt="golang"></a></div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">GoLang</a></h2>
-									<div class="textbox__description">Các bài học về GoLang từ cơ bản đến nâng cao</div>
+									<div class="textbox__description"><p class="bold">Các bài học về GoLang từ cơ bản đến nâng cao</p></div>
 								</div>
 							</div><!-- End / textbox -->
 									
@@ -88,7 +88,7 @@
 								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/golang.png' %}" alt=""></a></div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">GoLang</a></h2>
-									<div class="textbox__description">Các bài học về GoLang từ cơ bản đến nâng cao</div>
+									<div class="textbox__description"><p class="bold">Các bài học về GoLang từ cơ bản đến nâng cao</p></div>
 								</div>
 							</div><!-- End / textbox -->
 									
@@ -102,7 +102,7 @@
     <div class="container">
         <div class="row mb_10 mt_t30">
             <div class="title_header">
-                <h2 class="mb-0">Việc Làm IT Tại Nhà</h2>
+                <h2 class="mb-0 bold">Việc Làm IT Tại Nhà</h2>
             </div>
         </div>
     </div>
@@ -114,21 +114,10 @@
 						<div class="col-md-4 col-lg-4 mt_t20">									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image"><a href="\python_page"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
+								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
 								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="#">Tìm Việc</a></h2>
-									<div class="textbox__description">Dành cho các developer muốn tìm việc làm thêm tại nhà</div>
-								</div>
-							</div><!-- End / textbox -->									
-						</div>
-
-						<div class="col-md-4 col-lg-4 mt_t20">									
-							<!-- textbox -->
-							<div class="textbox">
-								<div class="textbox__image"><a href="\python_page"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
-								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="#">Tìm Người</a></h2>
-									<div class="textbox__description">Dành cho cá nhân và tổ chức muốn tìm developer làm dự án</div>
+									<h2 class="textbox__title"><a href="#">Việc Làm IT Tại Nhà</a></h2>
+									<div class="textbox__description"><p class="bold">Đăng và tìm kiếm việc làm thêm tại nhà</p></div>
 								</div>
 							</div><!-- End / textbox -->									
 						</div>
