--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -28,7 +28,7 @@
             <!-- navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="\home">DeveloperVN</a>
+                    <a class="navbar-brand" href="\DangKy">DeveloperVN</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -36,10 +36,10 @@
                     <div class="collapse navbar-collapse" id="navbarsExample07">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="\home">Trang Chủ <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="\TrangChu">Trang Chủ <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ngôn Ngữ Lập Trình</a>
+                            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown07">
                                 <a class="dropdown-item" href="#">Python</a>
                                 <a class="dropdown-item" href="#">ReactJS</a>
@@ -47,15 +47,15 @@
                             </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="\about">Giới Thiệu</a>
+                                <a class="nav-link" href="\GioiThieu">Giới Thiệu</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Liên Hệ</a>
+                                <a class="nav-link" href="\DangNhap">Liên Hệ</a>
                             </li>                           
                         </ul>
                     <form class="form-inline my-2 my-md-0">
-                        <button class="btn btn-info btn-sm">Đăng Ký</button>
-                        <button class="btn btn-info btn-sm">Đăng Nhập</button>
+                        <a href="\DangKy"><button class="btn btn-sm btn-rs text-while">Đăng Ký</button></a>
+                        <button class="btn btn-sm btn-rs text-while" submit="\DangNhap">Đăng Nhập</button>
                     </form>
                     </div>
                 </div>
@@ -63,13 +63,13 @@
             <!-- banner -->
             {% block banner %}{% endblock %}            
         </header>
-
+        <div class="container content">
         <!-- article -->
         {% block article %}{% endblock %}
 
         <!-- aside -->
         {% block aside %}{% endblock %}
-
+        </div>
         <!-- footer -->
         <footer class="bg-dark bg-cover footer mt_t30">
             <div class="py-6">
