--- a/home/templates/pages/about.html
+++ b/home/templates/pages/about.html
@@ -1,14 +1,15 @@
 {% extends "base_sub.html" %}
 {% load static %}
 {% block title %}GioiThieu{% endblock %}
-<!-- banner -->
+<!-- body -->
 {% block body %}
+<body style="background-image: url({% static 'image/about/about03.jpg' %})">
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
         <!-- navbar -->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <nav class="navbar navbar-expand-lg navbar-dark bg_trans fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="\home">DeveloperVN</a>
+                    <a class="navbar-brand" href="\TrangChu">DeveloperVN</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -16,18 +17,18 @@
                     <div class="collapse navbar-collapse" id="navbarsExample07">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                                <a class="nav-link" href="\home">Trang Chủ <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="\TrangChu">Trang Chủ <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ngôn Ngữ Lập Trình</a>
                             <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                <a class="dropdown-item" href="#">Python</a>
-                                <a class="dropdown-item" href="#">ReactJS</a>
-                                <a class="dropdown-item" href="#">GoLang</a>
+                                <a class="dropdown-item drop_hearder" href="#">Python</a>
+                                <a class="dropdown-item drop_hearder" href="#">ReactJS</a>
+                                <a class="dropdown-item drop_hearder" href="#">GoLang</a>
                             </div>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="\about">Giới Thiệu</a>
+                                <a class="nav-link" href="\GioiThieu">Giới Thiệu</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Liên Hệ</a>
@@ -50,8 +51,8 @@
 
         <footer class="mastfoot mt-auto text-center">
             <div class="row footer_btn">
-                <button type="button" class="btn btn-primary btn-lg">Liên Hệ Chúng Tôi</button>
-                <div class="btn-group ml_20">
+                <button type="button" class="btn btn-primary btn-lg mr_20 mt_t10">Liên Hệ Chúng Tôi</button>
+                <div class="btn-group mt_t10">
                     <button type="button" class="btn-lg btn-success dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</button> 
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">Python</a>
@@ -62,4 +63,5 @@
             </div>
         </footer>
     </div>
+</body>
 {% endblock %}
