--- a/home/templates/pages/subjects.html
+++ b/home/templates/pages/subjects.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row mb_20">
             <div class="title_header">
-                <h2 class="mb-0">Python Cơ Bản</h2>
+                <h2 class="mb-0 bold">Python Cơ Bản</h2>
             </div>
         </div>
     </div>
@@ -24,10 +24,10 @@
                 <div class="item tns-item tns-slide-active col-md-3 col-lg-3" id="tns1-item3">
                     <!-- Card -->
                     <div class="card  mb-4 card-hover">
-                        <a href="pages/course-single.html" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
+                        <a href="\BaiHoc" class="card-img-top"><img src="{% static 'image/subjects/python/course-python.jpg' %}" alt="" class="card-img-top rounded-top"></a>
                         <!-- Card Body -->
                         <div class="card-body">
-                            <h5 class="mb-2 text-truncate-line-2 "><a href="pages/course-single.html" class="text-inherit">Bài 1: Giới thiệu</a></h5>
+                            <h5 class="mb-2 text-truncate-line-2 "><a href="\BaiHoc" class="text-inherit">Bài 1: Giới thiệu</a></h5>
                             <!-- List -->
                             <ul class="mb-3 list-inline">
                                 <li class="list-inline-item"><i class="far fa-clock mr-1"></i>2h 30m</li>
@@ -194,7 +194,7 @@
     <div class="container">
         <div class="row mb_20">
             <div class="title_header">
-                <h2 class="mb-0">Python Nâng Cao</h2>
+                <h2 class="mb-0 bold">Python Nâng Cao</h2>
             </div>
         </div>
     </div>
