--- a/home/templates/base_les.html
+++ b/home/templates/base_les.html
@@ -19,6 +19,7 @@
         <script src="{% static 'js/popper.min.js' %}"></script>
         <script src="{% static 'js/bootstrap.min.js' %}" async defer></script>
         <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v10.0&appId=274403149747890&autoLogAppEvents=1" nonce="kyZ37haC"></script>
         <!-- java script self-defined -->
         
     </head>
@@ -63,7 +64,7 @@
             <!-- banner -->
             {% block banner %}{% endblock %}            
         </header>
-        <div class="container">
+        <div class="container content">
         <!-- article -->
         {% block article %}{% endblock %}
 
