--- a/home/templates/pages/about.html
+++ b/home/templates/pages/about.html
@@ -45,7 +45,7 @@
 
         <main role="main" class="inner cover">           
             <h1 class="cover-heading">Developer Việt Nam</h1>
-            <p class="lead">Chúng tôi tạo ra để cung cấp các bài học về lập trình</p>
+            <p class="lead">Chúng tôi tạo ra Developer Việt Nam mục đích để cung cấp các bài học về lập trình từ cơ bản đến nâng cao. Giúp những ai đang cần tìm hiểu về ngôn ngữ mới</p>
             
         </main>
 
