--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -117,7 +117,7 @@
 								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">Việc Làm IT Tại Nhà</a></h2>
-									<div class="textbox__description"><p class="bold">Đăng và tìm kiếm việc làm thêm tại nhà</p></div>
+									<div class="textbox__description"><p class="bold">Đăng tin miễn phí và tìm kiếm việc làm thêm tại nhà</p></div>
 								</div>
 							</div><!-- End / textbox -->									
 						</div>
