--- a/home/templates/pages/lesson.html
+++ b/home/templates/pages/lesson.html
@@ -9,11 +9,8 @@
 {% endblock %}
 <!-- article -->
 {% block article %}
-<article class="col-md-8 col-sm-12 article_area mt_t20">
-    <div class="gooogle_adv">
-        <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
-    </div>
-    <div class="row mb_20 mt_t20">
+<article class="col-md-8 col-sm-12 article_area mt_t10">   
+    <div class="row mb_20">
         <div class="title_header">
             <h2 class="mb-0 bold">Python Cơ Bản</h2>
         </div>
@@ -21,28 +18,104 @@
     
     <!-- section -->
     <section class="md-section">
+        <!-- lesson content -->
         <div class="title_lesson">
-            <h4>Bài 1: Giới Thiệu</h4>
+            <h4 class="strong_blue">Bài 1: Giới Thiệu</h4>
         </div>
         <div class="video_lesson">
-            <video style="background-color: black"></video>
+            <video></video>
         </div>
         <div class="content_lesson">
-            <p>đây là nội dung bài 4</p>
+            <h4>Nội dung chính</h4>
+            <p>1. Giới thiệu về ngôn ngữ Python</p>
+            <p>2. Cài đặt tool và môi trường</p>
+            <p>3. Viết chương trình đầu tiên và chạy thành công công chương trình</p>
         </div>
-        <div class="commnet">
-            <p>đây là vùng commnet</p>
+        <!-- google advertisement -->
+        <div class="gooogle_adv_hori">
+            <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
+        </div>
+        <!-- commnet -->
+        <div class="commnet mt_t10">
+            <div class="title_comment">
+                <h5 class="bold">Bình luận</h5>
+                <p class="red">Xin lỗi! Chức năng này đang được cập nhật!!</p>
+            </div>
         </div>
     </section>
 </article>
 {% endblock %}
  <!-- aside -->
 {% block aside %}
-<aside class="col-md-4 col-sm-12 aside_area mt_t20">
+<aside class="col-md-4 col-sm-12 aside_area mt_t10">
+    <!-- facebook -->
     <div id="fb-root"></div>
     <div class="fb-page" data-href="https://www.facebook.com/Developer-Vi%E1%BB%87t-Nam-109512397877362" 
     data-tabs="timeline" data-width="" data-height="130px" data-small-header="false" data-adapt-container-width="true" 
     data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Developer-Vi%E1%BB%87t-Nam-109512397877362" 
     class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Developer-Vi%E1%BB%87t-Nam-109512397877362">Developer Việt Nam</a></blockquote></div>
+    <!-- google advertisement -->
+    <div class="gooogle_adv_verti mt_t10">
+        <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
+    </div>
+    <!-- lesson more -->
+    <div class="lesson_more mt_t10">
+        <div class="les_header padding_5" style="background-image: url({% static 'image/background/title.jpg' %})">
+            <h3>Bài Học Tiếp Theo</h3>
+        </div>
+        <div class="les_content padding_5">
+            <div class="les_row">
+                <div class="video_more mr_5">
+                    <video></video>
+                </div>
+                <div class="title_more">
+                    <a href="#"><p class="bold">Bài 2: Kiểu dữ liệu</p></a>
+                </div>
+            </div>
+
+            <div class="les_row">
+                <div class="video_more mr_5">
+                    <video></video>
+                </div>
+                <div class="title_more">
+                    <a href="#"><p class="bold">Bài 3: Cú pháp cơ bản</p></a>
+                </div>
+            </div>
+
+            <div class="les_row">
+                <div class="video_more mr_5">
+                    <video></video>
+                </div>
+                <div class="title_more">
+                    <a href="#"><p class="bold">Bài 4: Xử lý ngoại lệ</p></a>
+                </div>
+            </div>
+
+            <div class="les_row">
+                <div class="video_more mr_5">
+                    <video></video>
+                </div>
+                <div class="title_more">
+                    <a href="#"><p class="bold">Bài 5: Giới Thiệu</p></a>
+                </div>
+            </div>
+
+            <div class="les_row">
+                <div class="video_more mr_5">
+                    <video></video>
+                </div>
+                <div class="title_more">
+                    <a href="#"><p class="bold">Bài 6: Giới Thiệu</p></a>
+                </div>
+            </div>
+            <div class="les_more_total">
+                <a href ="#">Xem thêm</a>
+            </div>
+        </div>
+    </div>
+    <!-- google advertisement -->
+    <div class="gooogle_adv_verti mt_t10">
+        <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
+    </div>
 </aside>
 {% endblock %}
