--- a/home/templates/pages/register.html
+++ b/home/templates/pages/register.html
@@ -9,11 +9,11 @@
         <h1 class="h3 mb-3 font-weight-normal">Đăng Ký Tài Khoản</h1>
         <h1 class="h3 mb-3 font-weight-normal">Vui Lòng Điền Thông Tin</h1>
         <p class="mt_t10 text-muted text-left nomargin_bottom">Nhập địa chỉ Email</p>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Địa chỉ Email" required="" autofocus="">
+        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Địa chỉ Email" required="" autofocus="">
         <p class="mt_t10 text-muted text-left nomargin_bottom">Nhập mật khẩu</p>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Mật Khẩu" required="">
+        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Mật Khẩu" required="">
         <p class="mt_t10 text-muted text-left nomargin_bottom">Xác nhận mật khẩu</p>
-        <input type="password" id="confirmPassword" class="form-control" placeholder="Xác Nhận Mật Khẩu" required="">     
+        <input type="password" id="confirmPassword" name="confirmPassword" class="form-control" placeholder="Xác Nhận Mật Khẩu" required="">     
         <button class="btn btn-lg btn-rs btn-block mt_t30 bold" type="submit">Đăng Ký</button>
         <div class="text-left mt_t10 bold">
             <a href="\DangNhap" class="blue">Tôi đã có tài khoản!</a>
