--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -28,7 +28,7 @@
             <!-- navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="\DangKy">DeveloperVN</a>
+                    <a class="navbar-brand" href="\TrangChu">DeveloperVN</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -54,8 +54,8 @@
                             </li>                           
                         </ul>
                     <form class="form-inline my-2 my-md-0">
-                        <a href="\DangKy"><button class="btn btn-sm btn-rs text-while">Đăng Ký</button></a>
-                        <button class="btn btn-sm btn-rs text-while" submit="\DangNhap">Đăng Nhập</button>
+                        <button class="btn btn-sm btn-rs text-while" formaction ="\DangKy">Đăng Ký</button>
+                        <button class="btn btn-sm btn-rs text-while" formaction ="\DangNhap">Đăng Nhập</button>
                     </form>
                     </div>
                 </div>
