--- a/home/templates/pages/sign_in.html
+++ b/home/templates/pages/sign_in.html
@@ -8,9 +8,9 @@
         <a href="\TrangChu"><img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72"></a>
         <h1 class="h3 mb-3 font-weight-normal">Vui Lòng Nhập Tài Khoản</h1>
         <label for="inputEmail" class="sr-only">Địa chỉ Email</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Địa chỉ Email" required="" autofocus="">
+        <input type="email" id="inputEmail" name="inputEmail" class="form-control" placeholder="Địa chỉ Email" required="" autofocus="">
         <label for="inputPassword" class="sr-only">Mật Khẩu</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Mật Khẩu" required="">
+        <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Mật Khẩu" required="">
         <div class="text-left">
             <a href="#" class="blue">Quên mật khẩu?</a>
         </div>      
