--- a/home/templates/pages/home.html
+++ b/home/templates/pages/home.html
@@ -49,7 +49,9 @@
 									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image"><a href="\Python"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
+								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
+									<a href="\Python"><img src="{% static  'image/session/python.png' %}" alt="python"></a>
+								</div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="\Python">Python</a></h2>
 									<div class="textbox__description"><p class="bold">Các bài học về Python từ cơ bản đến nâng cao</p></div>
@@ -61,7 +63,9 @@
 									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/reactjs.png' %}" alt="reactjs"></a></div>
+								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
+									<a href="#"><img src="{% static  'image/session/reactjs.png' %}" alt="reactjs"></a>
+								</div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">ReactJS</a></h2>
 									<div class="textbox__description"><p class="bold">Các bài học về ReactJS từ cơ bản đến nâng cao</p></div>
@@ -73,19 +77,9 @@
 									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/golang.png' %}" alt="golang"></a></div>
-								<div class="textbox__body">
-									<h2 class="textbox__title"><a href="#">GoLang</a></h2>
-									<div class="textbox__description"><p class="bold">Các bài học về GoLang từ cơ bản đến nâng cao</p></div>
+								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
+									<a href="#"><img src="{% static  'image/session/golang.png' %}" alt="golang"></a>
 								</div>
-							</div><!-- End / textbox -->
-									
-						</div>
-                        <div class="col-md-4 col-lg-4 mt_t20">
-									
-							<!-- textbox -->
-							<div class="textbox">
-								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/golang.png' %}" alt=""></a></div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">GoLang</a></h2>
 									<div class="textbox__description"><p class="bold">Các bài học về GoLang từ cơ bản đến nâng cao</p></div>
@@ -114,7 +108,9 @@
 						<div class="col-md-4 col-lg-4 mt_t20">									
 							<!-- textbox -->
 							<div class="textbox">
-								<div class="textbox__image"><a href="#"><img src="{% static  'image/session/python.png' %}" alt="python"></a></div>
+								<div class="textbox__image" style="background-image: url({% static 'image/background/yellow.jpg' %})">
+									<a href="#"><img src="{% static  'image/session/python.png' %}" alt="python"></a>
+								</div>
 								<div class="textbox__body">
 									<h2 class="textbox__title"><a href="#">Việc Làm IT Tại Nhà</a></h2>
 									<div class="textbox__description"><p class="bold">Đăng tin miễn phí và tìm kiếm việc làm thêm tại nhà</p></div>
