--- a/home/templates/pages/lesson.html
+++ b/home/templates/pages/lesson.html
@@ -35,6 +35,31 @@
         <div class="gooogle_adv_hori">
             <img src="{% static 'image/google_adv/01.jpg' %}" alt="">
         </div>
+        <!-- lesson next -->
+        <div class="lesson_next_more mt_t10">
+            <div class="les_title">
+                <div class="left">
+                    <h5 class="bold">Bài học tiếp theo</h5>
+                </div>
+                <div class="right">
+
+                </div>
+            </div>
+            <div class="les_row">
+                <div class="lesson_next col-md-4 col-sm-6 padding_5">
+                    <div class="video_next"><video></video></div>
+                    <div class="title_next"><a href="#"><h5 class="font_size_init" alt="Bài 2: Cú pháp đơn giản 12345678">Bài 2: Cú pháp đơn giản 12345678</h5></a></div>
+                </div>
+                <div class="lesson_next col-md-4 col-sm-6 padding_5">
+                    <div class="video_next"><video></video></div>
+                    <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
+                </div>
+                <div class="lesson_next col-md-4 col-sm-6 padding_5">
+                    <div class="video_next"><video></video></div>
+                    <div class="title_next"><a href="#"><h5 class="font_size_init">Bài 2: Cú pháp đơn giản</h5></a></div>
+                </div>
+            </div>
+        </div>
         <!-- commnet -->
         <div class="commnet mt_t10">
             <div class="title_comment">
@@ -61,7 +86,7 @@
     <!-- lesson more -->
     <div class="lesson_more mt_t10">
         <div class="les_header padding_5" style="background-image: url({% static 'image/background/title.jpg' %})">
-            <h3>Bài Học Tiếp Theo</h3>
+            <h3 class="bold">Xem nhiều</h3>
         </div>
         <div class="les_content padding_5">
             <div class="les_row">
@@ -69,7 +94,7 @@
                     <video></video>
                 </div>
                 <div class="title_more">
-                    <a href="#"><p class="bold">Bài 2: Kiểu dữ liệu</p></a>
+                    <a href="#"><h5 class="font_size_init">Bài 2: Kiểu dữ liệu</h5></a>
                 </div>
             </div>
 
@@ -78,7 +103,7 @@
                     <video></video>
                 </div>
                 <div class="title_more">
-                    <a href="#"><p class="bold">Bài 3: Cú pháp cơ bản</p></a>
+                    <a href="#"><h5 class="font_size_init">Bài 3: Cú pháp cơ bản</h5></a>
                 </div>
             </div>
 
@@ -87,7 +112,7 @@
                     <video></video>
                 </div>
                 <div class="title_more">
-                    <a href="#"><p class="bold">Bài 4: Xử lý ngoại lệ</p></a>
+                    <a href="#"><h5 class="font_size_init">Bài 4: Xử lý ngoại lệ</h5></a>
                 </div>
             </div>
 
@@ -96,7 +121,7 @@
                     <video></video>
                 </div>
                 <div class="title_more">
-                    <a href="#"><p class="bold">Bài 5: Giới Thiệu</p></a>
+                    <a href="#"><h5 class="font_size_init">Bài 5: Giới Thiệu</h5></a>
                 </div>
             </div>
 
@@ -105,7 +130,7 @@
                     <video></video>
                 </div>
                 <div class="title_more">
-                    <a href="#"><p class="bold">Bài 6: Giới Thiệu</p></a>
+                    <a href="#"><h5 class="font_size_init" alt="Bài 6: Giới Thiệu">Bài 6: Giới Thiệu</h5></a>
                 </div>
             </div>
             <div class="les_more_total">
