--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -4,6 +4,7 @@
         {% load static %}
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}{% endblock %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,6 +14,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="https://themes.getbootstrap.com/wp-content/themes/bootstrap-marketplace/assets/images/fav/favicon-32x32.png">
         <!-- css  self-defined-->
         <link rel="stylesheet" href="{% static 'css/common.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
         <!-- java script library-->
         <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
@@ -28,7 +30,7 @@
             <!-- navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
                 <div class="container">
-                    <a class="navbar-brand" href="\TrangChu">DeveloperVN</a>
+                    <a class="navbar-brand bold" href="\TrangChu">DeveloperVN</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -39,12 +41,15 @@
                                 <a class="nav-link" href="\TrangChu">Trang Chủ <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                <a class="dropdown-item" href="#">Python</a>
-                                <a class="dropdown-item" href="#">ReactJS</a>
-                                <a class="dropdown-item" href="#">GoLang</a>
-                            </div>
+                                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdown07">
+                                    <a class="dropdown-item" href="#">Python</a>
+                                    <a class="dropdown-item" href="#">ReactJS</a>
+                                    <a class="dropdown-item" href="#">GoLang</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="\GioiThieu">Chia Sẻ Kiến Thức</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="\GioiThieu">Giới Thiệu</a>
