--- a/home/templates/base_sub.html
+++ b/home/templates/base_sub.html
@@ -14,6 +14,7 @@
         <!-- css  self-defined-->
         <link rel="stylesheet" href="{% static 'css/common.css' %}">
         <link rel="stylesheet" href="{% static 'css/base_sub.css' %}">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
         <!-- java script library-->
         <script src="{% static 'js/jquery-3.4.0.min.js' %}"></script>
