--- a/home/templates/pages/about.html
+++ b/home/templates/pages/about.html
@@ -20,12 +20,15 @@
                                 <a class="nav-link" href="\TrangChu">Trang Chủ <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ngôn Ngữ Lập Trình</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown07">
-                                <a class="dropdown-item drop_hearder" href="#">Python</a>
-                                <a class="dropdown-item drop_hearder" href="#">ReactJS</a>
-                                <a class="dropdown-item drop_hearder" href="#">GoLang</a>
-                            </div>
+                                <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Khóa Học</a>
+                                <div class="dropdown-menu" aria-labelledby="dropdown07">
+                                    <a class="dropdown-item drop_hearder" href="#">Python</a>
+                                    <a class="dropdown-item drop_hearder" href="#">ReactJS</a>
+                                    <a class="dropdown-item drop_hearder" href="#">GoLang</a>
+                                </div>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="\GioiThieu">Chia Sẻ Kiến Thức</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="\GioiThieu">Giới Thiệu</a>
@@ -35,8 +38,8 @@
                             </li>                           
                         </ul>
                     <form class="form-inline my-2 my-md-0">
-                        <button class="btn btn-info btn-sm">Đăng Ký</button>
-                        <button class="btn btn-info btn-sm">Đăng Nhập</button>
+                        <button class="btn btn-sm btn-rs text-while" formaction ="\DangKy">Đăng Ký</button>
+                        <button class="btn btn-sm btn-rs text-while" formaction ="\DangNhap">Đăng Nhập</button>
                     </form>
                     </div>
                 </div>
